compiler/tests/success/otbn/intrinsic_li.jazz
export
fn li() {
    reg u32 x;

    x = #LI(1);
    [x] = x;

    x = #LI(-1);
    [x] = x;

    x = #LI(0xabcdef01);
    [x] = x;
}
