compiler/tests/fail/arm-m4/intrinsic_ldrS.jazz
export
fn ldr(reg u32 arg) -> reg u32 {
    reg u32 x;
    ?{}, x = #LDRS([arg]);
    return x;
}
